--- a/Portofolio/style.css
+++ b/Portofolio/style.css
@@ -14,7 +14,7 @@
   color: #ffffff;
 }
 .clr-black {
-  color: #000000;
+  color: #303030;
 }
 .clr-grey {
   color: rgb(151, 151, 151);
@@ -33,6 +33,10 @@
 }
 .judul {
   font-size: 55px;
+  font-weight: 600;
+}
+.sub-judul {
+  font-size: 40px;
   font-weight: 600;
 }
 .super-isi {
@@ -103,19 +107,19 @@
 }
 
 .about-me-container {
-  min-height: 100vh;
+  min-height: 90vh;
 }
 
 .hobi-container {
-  min-height: 100vh;
+  min-height: 90vh;
 }
 
 .portofolio-container {
-  min-height: 100vh;
+  min-height: 90vh;
 }
 
 .contact-me-container {
-  min-height: 100vh;
+  min-height: 90vh;
 }
 
 .nama-header-container {
@@ -144,10 +148,6 @@
   border: 0px;
 }
 
-.moon-container {
-  cursor: pointer;
-}
-
 .menu {
   cursor: pointer;
 }
@@ -161,6 +161,11 @@
 }
 .moon-terang {
   /* display: none; */
+}
+
+.menu-container:hover .intro-container {
+  width: 100px;
+  background-color: #6293ce;
 }
 
 /* intro */
@@ -186,6 +191,8 @@
 .instagram {
   cursor: pointer;
   width: 25px;
+  margin-top: 7vh;
+  margin-bottom: 7vh;
 }
 
 .github {
@@ -205,7 +212,7 @@
   border-radius: 12px;
   cursor: pointer;
 }
-.container-btn-contactme:hover {
+.container-1-contactme:hover {
   background-color: #6293ce;
 }
 .btn-contactme {
@@ -223,6 +230,140 @@
 .foto-profil {
   width: 370px;
 }
+
+.moon {
+  cursor: pointer;
+}
+
+/* nav  */
+.nav-responsiv {
+  display: flex;
+  position: fixed;
+  z-index: 1;
+  bottom: -100vh;
+  height: 30vh;
+  left: 0;
+  right: 0;
+  background-color: white;
+  border-radius: 40px;
+  border-width: 5px;
+  border-color: #ebebeb;
+  border-left: 0px;
+  border-right: 0px;
+  border-bottom: 0px;
+  border-style: solid;
+  transition: all 300ms;
+}
+.nav-responsiv-isi {
+  position: absolute;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  flex-direction: row;
+  flex-wrap: wrap;
+  width: 100%;
+  height: 80%;
+}
+.nav-responsiv-close {
+  position: absolute;
+  width: 6vh;
+  height: 20%;
+  bottom: 0;
+  right: 0;
+  margin-right: 5vw;
+}
+.nav-responsiv-isi div {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 10vh;
+  height: 10vh;
+  cursor: pointer;
+  font-size: 1.5vh;
+}
+.nav-responsiv-isi-icon {
+  max-width: 4vh;
+}
+.nav-responsiv-close {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+}
+
+/* about Me */
+.about-me-container {
+  display: flex;
+  flex-direction: column;
+}
+
+.about-container-1 {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.about-container-2 {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  flex-grow: 1;
+}
+
+.foto-1 {
+  width: 27vw;
+  border-radius: 10px;
+}
+.about-container-isi {
+  width: 500px;
+}
+.about-me-container {
+  margin-top: 10vh;
+}
+
+/* hobi  */
+.hobi-container {
+  margin-top: 10vh;
+}
+.about-container-2-item {
+  display: flex;
+  flex-direction: column;
+}
+.hobi-item {
+  display: flex;
+  justify-content: flex-end;
+  align-items: flex-start;
+  flex-direction: column;
+  max-width: 17vw;
+  height: 25vw;
+  padding-left: 2.8%;
+  padding-bottom: 1.5vw;
+}
+.hobi-text-1 {
+  font-size: 1.5vw;
+  margin-top: 1.5vw;
+}
+.hobi-text-2 {
+  font-size: 1vw;
+  text-decoration: none;
+}
+.hobi-text-3 {
+  font-size: 1.5vw;
+  margin-bottom: 1.5vw;
+}
+
+/* portofolio  */
+.portofolio-container {
+  margin-top: 10vh;
+}
+
+/* Contact Me  */
+.contact-me-container {
+  margin-top: 10vh;
+}
+
 @media (min-width: 0px) and (max-width: 1000px) {
   .main-container {
     width: 100%;
@@ -237,6 +378,7 @@
     height: 7vh;
     left: 0;
     right: 0;
+    bottom: 0.1vh;
     margin-right: 0;
     margin-left: 0;
   }
@@ -247,8 +389,7 @@
     right: 0;
     top: auto;
     bottom: -1px;
-    border-width: 3px;
-    border-width: 3px;
+    border-width: 0.3vh;
     border-color: #ebebeb;
     border-left: 0px;
     border-right: 0px;
@@ -264,7 +405,7 @@
     justify-content: right;
   }
   .moon-container {
-    margin-right: 14px;
+    margin-right: 20px;
     display: flex;
     justify-content: space-around;
     align-items: center;
@@ -273,10 +414,6 @@
   .moon {
     width: 100%;
     height: 3vh;
-  }
-
-  .nav-item-hide {
-    display: none;
   }
 
   .menu-container {
@@ -305,7 +442,6 @@
   .intro-logo {
     order: 1;
     width: 10vw;
-    height: 25vh;
     margin-top: 10%;
   }
   .linkedin,
@@ -314,8 +450,8 @@
     width: 7vw;
   }
   .instagram {
-    margin-top: 1.5vh;
-    margin-bottom: 1.5vh;
+    margin-top: 4vh;
+    margin-bottom: 4vh;
   }
 
   .intro-gambar {
@@ -351,5 +487,70 @@
     width: 40vw;
     height: 18vw;
     margin-top: 5vh;
+  }
+
+  .nav-item-hide {
+    display: none;
+  }
+
+  /* about me  */
+  .about-container-isi {
+    width: 93%;
+  }
+  .about-isi-container-1 {
+    font-size: 35px;
+  }
+  .sub-judul {
+    font-size: 75px;
+  }
+  .foto-1 {
+    width: 70vw;
+  }
+  .about-me-container {
+    margin-top: 10vh;
+  }
+  .about-me-container {
+    margin-top: 10vh;
+    display: flex;
+    flex-direction: column;
+  }
+
+  .about-container-2 {
+    flex-direction: column;
+    flex-grow: 1;
+  }
+
+  /* hobi  */
+  .hobi-item-container {
+    height: 120vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  .hobi-item {
+    margin: 1.5vh;
+    padding-bottom: 2.5vh;
+    padding-left: 3vh;
+    min-width: 65vw;
+    box-shadow: 0px 5px 20px 7px rgb(227, 227, 227);
+  }
+  .hobi-icon {
+    width: 4vh;
+    height: 4vh;
+    margin-bottom: 2.5vh;
+  }
+  .hobi-text-1 {
+    font-size: 3vh;
+  }
+  .hobi-text-2 {
+    font-size: 1.6vh;
+  }
+  .panah {
+    width: 2.5vh;
+    height: 2.5vh;
+  }
+  .hobi-text-3 {
+    font-size: 3vh;
+    margin-bottom: 3vh;
   }
 }
