--- a/docs/style.css
+++ b/docs/style.css
@@ -17,7 +17,7 @@
 }
 .white-night {
   transition: 0.5s;
-  color: #ffffff;
+  color: #f8fafc;
 }
 .muncul {
   display: block;
@@ -26,12 +26,16 @@
   display: none;
 }
 
+.intro-logo > svg:hover {
+  color: #0284c7;
+}
+
 /* warna */
 .clr-1 {
-  color: #72abf2;
+  color: #0ea5e9;
 }
 .clr-2 {
-  color: #ffffff;
+  color: #f8fafc;
 }
 .clr-black {
   color: #303030;
@@ -40,7 +44,7 @@
   color: rgb(151, 151, 151);
 }
 .bg-blue {
-  background-color: #72abf2;
+  background-color: #0ea5e9;
 }
 .bg-w-blue {
   background-color: #dbe2ef;
@@ -117,7 +121,7 @@
   border-right: 0px;
   border-top: 0px;
   border-style: solid;
-  background-color: white;
+  background-color: #f8fafc;
 }
 
 .header-container {
@@ -198,7 +202,7 @@
 
 .menu-container:hover .intro-container {
   width: 100px;
-  background-color: #6293ce;
+  background-color: #0284c7;
 }
 
 /* intro */
@@ -246,7 +250,7 @@
   cursor: pointer;
 }
 .container-1-contactme:hover {
-  background-color: #6293ce;
+  background-color: #0284c7;
 }
 .btn-contactme {
   border: 0;
@@ -277,7 +281,7 @@
   height: 30vh;
   left: 0;
   right: 0;
-  background-color: white;
+  background-color: #f8fafc;
   border-radius: 40px;
   border-width: 5px;
   border-color: #ebebeb;
@@ -430,6 +434,7 @@
   height: 17%;
   margin-bottom: 5vh;
   background-color: #e9f3ff;
+  padding: 16px;
 }
 .contact-email {
   border-radius: 8px;
@@ -437,6 +442,7 @@
   height: 17%;
   margin-bottom: 5vh;
   background-color: #e9f3ff;
+  padding: 16px;
 }
 .contact-pesan {
   flex-grow: 1;
@@ -445,6 +451,7 @@
   height: 17%;
   margin-bottom: 4vh;
   background-color: #e9f3ff;
+  padding: 16px;
 }
 .contact-me-isi-judul {
   font-size: 1.6vw;
@@ -466,7 +473,7 @@
   margin-left: 2vw;
 }
 .container-btn-portofolio:hover {
-  background-color: #5f8fcb;
+  background-color: #0284c7;
 }
 
 .portofolio-isi-container-1-isi {
@@ -474,7 +481,7 @@
 }
 
 .container-btn-contactme:hover {
-  background-color: #5d94d7;
+  background-color: #0284c7;
 }
 
 @media (min-width: 0px) and (max-width: 1000px) {
